# caros

./: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml
speed-dreams-code/freesolid/: CMakeLists.txt  ChangeLog  FreeSOLID.sln  FreeSOLID.spec.in  FreeSOLID.vcproj  Makefile.am  TODO  Walk.vcproj  acinclude.m4  configure.in  freesolid-config.in  solid.dsw
speed-dreams-code/freesolid/cmake/: SOLID.cmake.in
speed-dreams-code/freesolid/doc/: Makefile.am  solid2.info
speed-dreams-code/freesolid/include/: Makefile.am
speed-dreams-code/freesolid/include/3D/: Basic.h  Makefile.am  Matrix.h  Point.h  Quaternion.h  Tuple3.h  Tuple4.h  Vector.h
speed-dreams-code/freesolid/include/SOLID/: Makefile.am  broad.h  solid.h  types.h
speed-dreams-code/freesolid/libbroad/: BP_C-api.cpp  BP_Endpoint.cpp  BP_Endpoint.h  BP_Proxy.cpp  BP_Proxy.h  BP_Scene.cpp  BP_Scene.h  CMakeLists.txt  Makefile.am  broad.dsp
speed-dreams-code/freesolid/libmoto/: CMakeLists.txt  GEN_List.h  GEN_MinMax.h  GEN_Optimize.h  GEN_random.cpp  GEN_random.h  MT_Matrix3x3.h  MT_Point2.h  MT_Point3.cpp  MT_Point3.h  MT_Quaternion.h  MT_Scalar.h  MT_Transform.cpp  MT_Transform.h  MT_Tuple2.h  MT_Tuple3.h  MT_Tuple4.h  MT_Vector2.h  MT_Vector3.h  MT_Vector4.h  Makefile.am  moto.dsp
speed-dreams-code/freesolid/libsolid/: AlgoTable.h  BBox.h  BBoxTree.cpp  BBoxTree.h  Box.cpp  Box.h  C-api.cpp  CMakeLists.txt  Complex.cpp  Complex.h  Cone.cpp  Cone.h  Convex.cpp  Convex.h  Cylinder.cpp  Cylinder.h  Ellipsoid.cpp  Ellipsoid.h  Encounter.h  IndexArray.h  Makefile.am  Object.cpp  Object.h  Polygon.cpp  Polygon.h  Polyhedron.cpp  Polytope.h  RespTable.cpp  RespTable.h  Response.cpp  Response.h  Shape.h  Simplex.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h  VertexBase.h  solid.dsp
speed-dreams-code/freesolid/qhull/: FreeSOLID-README.txt  Makefile.am
speed-dreams-code/freesolid/qhull/src/: Makefile.am  geom.h  io.h  mem.h  merge.h  poly.h  qhull.h  qhull_a.h  qhull_interface.cpp  qset.h  stat.h  user.h
speed-dreams-code/freesolid/sample/: Makefile.am  depth.cpp  ellipsoid.cpp  sample.cpp  sample.dsp  teapot.cpp  torus.cpp  walk.cpp  world.vrt  x_wing.cpp
speed-dreams-code/speed-dreams-data/: CMakeLists.txt  README.md
speed-dreams-code/speed-dreams-data/cmake/: packaging-config.cmake  speed-dreams-data.cmake.in
speed-dreams-code/speed-dreams-data/data/: CMakeLists.txt  user-files
speed-dreams-code/speed-dreams-data/data/cars/: CMakeLists.txt
speed-dreams-code/speed-dreams-data/data/cars/categories/: 22MP1.xml  23MP1.xml  36GP.xml  67GP.xml  86MP1.xml  92MP1.xml  CMakeLists.txt  Fun-Racer.xml  LS-GT1.xml  LS-GT1v41.xml  LS-GT2.xml  LS-P1.xml  LS-P2.xml  MP1.xml  MP10.xml  MP3.xml  MP5.xml  MPA1.xml  MPA11.xml  MPA12.xml  MPE.xml  Nascar.xml  Preview.xml  RS.xml  Raid-T1.xml  References.xml  SD-GTP.xml  SRW.xml  Stock.xml  SuperCup.xml  SuperTour2.xml  Supercars.xml  TA50.xml  TRB1.xml
speed-dreams-code/speed-dreams-data/data/cars/models/: CMakeLists.txt
speed-dreams-code/speed-dreams-data/data/config/: CMakeLists.txt  downloadservers.xml  graph.xml  language.xml  logging.xml  networking.xml  osghudconfig.xml  raceengine.xml  raceresults.xsl  screen.xml  sound.xml  webserver.xml
speed-dreams-code/speed-dreams-data/data/config/raceman/: CMakeLists.txt  championship-24h.xml  championship-36gp.xml  championship-67gp.xml  championship-ls-gt1.xml  championship-mp1.xml  championship-mp5.xml  championship-mpa1.xml  championship-mpa11.xml  championship-online.xml  championship-supercars.xml  championship-trb1.xml  championship.xml  netclient.xml  netserver.xml  netwatcher.xml  networkrace.xml  optimizationMT.xml  practice.xml  quickrace.xml  singleevent-36gp.xml  singleevent-challenge.xml  singleevent-endurance.xml  singleevent-ls-gt1.xml  singleevent-mp5.xml  singleevent-mpa1.xml
speed-dreams-code/speed-dreams-data/data/data/: CMakeLists.txt  credits.xml
speed-dreams-code/speed-dreams-data/data/data/fonts/: CMakeLists.txt
speed-dreams-code/speed-dreams-data/data/data/gallery/: CMakeLists.txt
speed-dreams-code/speed-dreams-data/data/data/icons/: CMakeLists.txt
speed-dreams-code/speed-dreams-data/data/data/img/: CMakeLists.txt  mouse.xcf.bz2
speed-dreams-code/speed-dreams-data/data/data/menu/: CMakeLists.txt  carselectionmenu.xml  carsetupmenu.xml  carsetupmenuitems.xml  confirmmenu.xml  controlconfigmenu.xml  creditsmenu.xml  csnetworkclientmenu.xml  csnetworkservermenu.xml  csraceselectmenu.xml  displayconfigmenu.xml  downloadsmenu.xml  driverselectmenu.xml  exitmenu.xml  fileselectmenu.xml  forcefeedbackconfigmenu.xml  garagemenu.xml  graphicsconfigmenu.xml  grboard.xml  helpmenu.xml  hostsettingsmenu.xml  humanselectmenu.xml  infomenu.xml  joy2butconfigmenu.xml  joystickconfigmenu.xml  languagemenu.xml  loadingscreen.xml  mainmenu.xml  monitorconfigmenu.xml  mouseconfigmenu.xml  networkclientconnectmenu.xml  networkclientmenu.xml  networkhostmenu.xml  networkmenu.xml  networkwaitconnectmenu.xml  notifications.xml  opengloptionsmenu.xml  optimizationscreen.xml  optionsmenu.xml  osggraphinfomenu.xml  (+20 more)
speed-dreams-code/speed-dreams-data/data/data/music/: CMakeLists.txt  readme.txt
speed-dreams-code/speed-dreams-data/data/data/objects/: CMakeLists.txt  ad1.ac  bridge.ac  building1.ac  building2.ac  forest1.ac  forest2.ac  forest3.ac  normal_pit_indicator.ac  pit_indicator.ac  stadium1.ac  stand-main.ac  tree1.ac  tree10.ac  tree11.ac  tree12.ac  tree13.ac  tree14.ac  tree15.ac  tree16.ac  tree17.ac  tree2.ac  tree3.ac  tree4.ac  tree5.ac  tree6.ac  tree7.ac  tree8.ac  tree9.ac  treeg1.ac
speed-dreams-code/speed-dreams-data/data/data/shaders/: CMakeLists.txt  car.frag  car.vert  water.frag
speed-dreams-code/speed-dreams-data/data/data/sky/: CMakeLists.txt
speed-dreams-code/speed-dreams-data/data/data/sound/: CMakeLists.txt  SoundCredits.txt
speed-dreams-code/speed-dreams-data/data/drivers/: CMakeLists.txt
speed-dreams-code/speed-dreams-data/doc/: TRANSLATING.md
speed-dreams-code/speed-dreams-data/doc/cars/: indicators.md
(+1548 files in other folders)
