noinst_LTLIBRARIES = libqhull.la
libqhull_la_SOURCES =	user.c \
			global.c \
			stat.c \
			io.c \
			geom2.c \
			poly2.c \
			merge.c \
			qhull.c \
			geom.c \
			poly.c \
			qset.c \
			mem.c \
			user.h \
			global.h \
			geom \
			io.h \
			mem.h \
			merge.h \
			poly.h \
			qhull.h \
			qhull_a.h \
			qset.h \
			stat.h
EXTRA_DIST = Changes.txt