install(FILES
    credits.xml
    DESTINATION ${datadir}/data
)

add_subdirectory(fonts)
add_subdirectory(gallery)
add_subdirectory(icons)
add_subdirectory(img)
add_subdirectory(menu)
add_subdirectory(objects)
add_subdirectory(sound)
add_subdirectory(sky)
add_subdirectory(textures)
add_subdirectory(tracks)
add_subdirectory(music)
add_subdirectory(shaders)
