install(FILES
    arrow-down-disabled.png
    arrow-down-focused.png
    arrow-down.png
    arrow-down-pushed.png
    arrow-left-disabled.png
    arrowleft-disabled.png
    arrow-left-focused.png
    arrowleft-focused.png
    arrowleft-normal.png
    arrow-left.png
    arrow-left-pushed.png
    arrowleft-pushed.png
    arrow-left-top-disabled.png
    arrow-left-top-focused.png
    arrow-left-top.png
    arrow-left-top-pushed.png
    arrow-right-disabled.png
    arrowright-disabled.png
    arrow-right-focused.png
    arrowright-focused.png
    arrowright-normal.png
    arrow-right.png
    arrow-right-pushed.png
    arrowright-pushed.png
    arrow-right-top-disabled.png
    arrow-right-top-focused.png
    arrow-right-top.png
    arrow-right-top-pushed.png
    arrow-up-disabled.png
    arrow-up-focused.png
    arrow-up.png
    arrow-up-pushed.png
    bg-button-big-focused.png
    bg-button-big-normal.png
    bg-button-big.png
    bg-button-big-pushed.png
    bg-button-focused.png
    bg-button.png
    bg-button-pushed.png
    black-square.png
    button-left-focused.png
    button-left-.png
    button-left.png
    button-left-pushed.png
    carimage.png
    checked.png
    checked-disabled.png
    guitest-grid.png
    head-aiconfig.png
    head-blindrace.png
    head-controlconfig.png
    head-credits.png
    head-displayconf.png
    head-driver.png
    header-background.png
    header.bmp
    header-vert.bmp
    head-forcefeedbackconfig.png
    head-garage.png
    head-graphicconfig.png
    head-help.png
    head-joy2butconfig.png
    head-joystickconfig.png
    head-loading.png
    head-mouseconfig.png
    head-nextevent.png
    head-opengloptions.png
    head-options.png
    head-playerconfig.png
    head-quit.png
    head-raceman.png
    head-raceselect.png
    head-results.png
    head-setup.png
    head-simulation.png
    head-sound.png
    head-standings.png
    head-startrace.png
    head-stoprace.png
    head-trackselect.png
    head-welcome.png
    icon-apply.png
    icon-cancel.png
    icon-controls-disabled.png
    icon-controls-focused.png
    icon-controls.png
    icon-controls-pushed.png
    icon-copy-disabled.png
    icon-copy-focused.png
    icon-copy.png
    icon-copy-pushed.png
    icon-deleteall-disabled.png
    icon-deleteall-focused.png
    icon-deleteall.png
    icon-deleteall-pushed.png
    icon-delete-disabled.png
    icon-delete-focused.png
    icon-delete.png
    icon-delete-pushed.png
    icon-info-disabled.png
    icon-info-focused.png
    icon-info.png
    icon-info-pushed.png
    icon-movedown-disabled.png
    icon-movedown-focused.png
    icon-movedown.png
    icon-movedown-pushed.png
    icon-moveup-disabled.png
    icon-moveup-focused.png
    icon-moveup.png
    icon-moveup-pushed.png
    icon-new5-disabled.png
    icon-new5-focused.png
    icon-new5.png
    icon-new5-pushed.png
    icon-new-disabled.png
    icon-new-focused.png
    icon-new.png
    icon-new-pushed.png
    icon-ok.png
    icon-position-disabled.png
    icon-position-focused.png
    icon-position.png
    icon-position-pushed.png
    icon-remove-disabled.png
    icon-remove-focused.png
    icon-remove.png
    icon-remove-pushed.png
    icon-shuffle-disabled.png
    icon-shuffle-focused.png
    icon-shuffle.png
    icon-shuffle-pushed.png
    label-background.png
    label-bg.png
    menuui.svg
    mouse_blue.png
    mouse_green.png
    mouse_orange.png
    mouse.png
    nocarpreview.png
    notificationbg.png
    notrackoutline.png
    notready.png
    osggraph-demo.jpg
    osggraph-demo2.jpg
    progressbar-bg.png
    progressbar.png
    pxl-ruler-hori.png
    ready.png
    reticle.png
    sd-logo-big.png
    sd-logo.png
    splash-career.jpg
    splash-careerstart.jpg
    splash-chall.jpg
    splash-challstart.jpg
    splash-champ.jpg
    splash-champstart.jpg
    splash-credits.jpg
    splash-endur.jpg
    splash-endurstart.jpg
    splash-garage.jpg
    splash-help.jpg
    splash-joy2butcal.jpg
    splash-joycal.jpg
    splash.jpg
    splash-mousecal.jpg
    splash-networkclientconnect.jpg
    splash-networkhost.jpg
    splash-networkhostsettings.jpg
    splash-networkrace.jpg
    splash-networkwaitconnect.jpg
    splash-optimization.jpg
    splash-pit.jpg
    splash-practice.jpg
    splash-practiceresults.jpg
    splash-quickrace.jpg
    splash-racechoice.jpg
    splash-raceload.jpg
    splash-run-practice.jpg
    splash-soundconf.jpg
    splash-trackselect.jpg
    ssggraph-demo.jpg
    ssggraph-multiscreen.jpg
    transparent.png
    unchecked.png
    unchecked-disabled.png
    vertical-separator.png
    webserverbusy0.png
    webserverbusy1.png
    webserverbusy2.png
    welcome.png
    whiteline.png
    DESTINATION ${datadir}/data/img
)

add_subdirectory(flags)
add_subdirectory(osg-hud)
add_subdirectory(osg-hud-originale)
