install(FILES
    carselectionmenu.xml
    carsetupmenuitems.xml
    carsetupmenu.xml
    controlconfigmenu.xml
    confirmmenu.xml
    creditsmenu.xml
    csnetworkclientmenu.xml
    csnetworkservermenu.xml
    csraceselectmenu.xml
    displayconfigmenu.xml
    downloadsmenu.xml
    driverselectmenu.xml
    exitmenu.xml
    fileselectmenu.xml
    forcefeedbackconfigmenu.xml
    garagemenu.xml
    graphicsconfigmenu.xml
    grboard.xml
    helpmenu.xml
    hostsettingsmenu.xml
    humanselectmenu.xml
    infomenu.xml
    joy2butconfigmenu.xml
    joystickconfigmenu.xml
    languagemenu.xml
    loadingscreen.xml
    mainmenu.xml
    menu-click.ogg
    menu-rollover.ogg
    monitorconfigmenu.xml
    mouseconfigmenu.xml
    networkclientconnectmenu.xml
    networkclientmenu.xml
    networkhostmenu.xml
    networkmenu.xml
    networkwaitconnectmenu.xml
    notifications.xml
    optimizationscreen.xml
    optionsmenu.xml
    osggraphinfomenu.xml
    pitmenu.xml
    playerconfigmenu.xml
    practiceresultsmenu.xml
    qualifsresultsmenu.xml
    raceblindscreen.xml
    raceglscreen.xml
    racemanmenu.xml
    racenexteventmenu.xml
    raceparamsmenu.xml
    raceresultsmenu.xml
    raceselectmenu.xml
    repomenu.xml
    ssggraphinfomenu.xml
    simuconfigmenu.xml
    soundconfigmenu.xml
    standingsmenu.xml
    startracemenu.xml
    stopracemenu.xml
    trackselectmenu.xml
    welcomemenu.xml
    DESTINATION ${datadir}/data/menu
)
