install(FILES
    ad1.ac
    Ambulance.ac
    background-sky.ac
    bridge.ac
    bridge-arch.ac
    building1.ac
    building2.ac
    CMakeLists.txt
    concrete.rgb
    FNCEB.png
    forest1.ac
    forest2.ac
    forest3.ac
    logo.rgb
    needle.ac
    normal_pit_indicator.ac
    pit_indicator.ac
    stadium1.ac
    stand-inter.ac
    stand-main.ac
    stand-wall.ac
    tree10.ac
    tree11.ac
    tree12.ac
    tree13.ac
    tree14.ac
    tree15.ac
    tree16.ac
    tree17.ac
    tree1.ac
    tree2.ac
    tree3.ac
    tree4.ac
    tree5.ac
    tree6.ac
    tree7.ac
    tree8.ac
    tree9.ac
    treeg1.ac
    wheel0.ac
    wheel0.acc
    wheel0.blend
    wheel0.osg
    wheel0-src.ac
    wheel1.ac
    wheel1.acc
    wheel1.osg
    wheel1-src.ac
    wheel2.ac
    wheel2.acc
    wheel2.osg
    wheel2-src.ac
    wheel3.ac
    wheel3.acc
    wheel3.osg
    wheel3-src.ac
    DESTINATION ${datadir}/data/objects
)
