install(FILES
    206_engine.wav
    935.wav
    944.wav
    alpha-romeo.wav
    axle.wav
    backfire_loop.wav
    backfire.wav
    boom.wav
    bottom_crash.wav
    cleanviper.wav
    clkdtmb2.wav
    CMakeLists.txt
    corolla1400hi2.wav
    crash1.wav
    crash2.wav
    crash3.wav
    crash4.wav
    crash5.wav
    crash6.wav
    curb_ride.wav
    dirt_ride.wav
    dirt_skid.wav
    engine-1.wav
    evo7_engine_f.wav
    evo7_engine.wav
    f360.wav
    ferrarif355.wav
    ferrarif50.wav
    ford1b.wav
    ford2c.wav
    fordgt2.wav
    gear_change1.wav
    grass_ride.wav
    gt40.wav
    impreza2002_engine.wav
    lamborghinidiablo.wav
    locked.wav
    lotus.wav
    mclarenf1.wav
    mp5-fmc.wav
    nsxnew.wav
    nsx.wav
    out_of_road-3.wav
    out_of_road.wav
    porsche_engine.wav
    rain.wav
    renault-v10.wav
    road-ride.wav
    rotary2.wav
    skid_metal.wav
    skid_tyres.wav
    skid.wav
    snow_ride.wav
    SoundCredits.txt
    tire_scrub.wav
    toro-rgt.wav
    turbo1.wav
    v10_raw.wav
    v12_raw.wav
    v12_smooth2.wav
    v12_smooth.wav
    v6_raw.wav
    v8-cr4sht3st.wav
    v8-ears68.wav
    v8_formula2.wav
    v8_formula.wav
    viper2.wav
    viper_long.wav
    xj220.wav
    DESTINATION ${datadir}/data/sound
)
