install(FILES
    Ambulance.png
    arbor2_n.png
    arbor2_n.rgb
    background.png
    background-sky.png
    back-sign.png
    back-sign.rgb
    breaklight1.png
    breaklight1.rgb
    breaklight2.png
    breaklight2.rgb
    building1.png
    building1.rgb
    building2.png
    building2.rgb
    bump-2.png
    bump-2.rgb
    bump-3.png
    bump-3.rgb
    bump-4.png
    bump-4.rgb
    bump-5.png
    bump-5.rgb
    bump-6.png
    bump-6.rgb
    bump-7.png
    bump-7.rgb
    bump-8.png
    bump-8.rgb
    bump-9.png
    bump-9.rgb
    bump-as.png
    bump-as.rgb
    bump-finegrain.png
    bump-finegrain.rgb
    bump-sand.png
    bump-sand.rgb
    concrete2.png
    concrete2.rgb
    concrete.png
    concrete.rgb
    counter-bg-10.png
    counter-bg-10.rgb
    counter-bg2.png
    counter-bg2.rgb
    counter-bg.png
    counter-bg.rgb
    counter-bg-rpm.png
    counter-bg-rpm.rgb
    counter.png
    counter.rgb
    env.png
    envshadow-few-clouds.png
    envshadow-full-cover.png
    envshadow-full-cover-rain.png
    envshadow-many-clouds.png
    envshadow-night.png
    envshadow-no-cloud.png
    envshadow.png
    envshadow-scarce-clouds.png
    fire0.png
    fire1.png
    FNCEB.png
    forest1.png
    forest1.rgb
    forest1-r.png
    forest1-r.rgb
    forest2.png
    forest2.rgb
    forest3.png
    forest3.rgb
    frontlight1.png
    frontlight2.png
    grassg1.png
    grassg1.rgb
    grassg2.png
    grassg2.rgb
    grassg3.png
    grassg3.rgb
    grey-tracks.png
    halo.png
    halo.rgba
    inner_halo.png
    land.png
    light-off.rgb
    light-on.rgb
    logo.png
    logo.rgb
    many.png
    moon.png
    moon.rgba
    outer_halo.png
    outer_halo.rgba
    panel-empty.png
    panel-empty.rgb
    people1.png
    people1.rgb
    pit-left.png
    pit-left.rgb
    pit-right.png
    pit-right.rgb
    poutre3.png
    poutre3.rgb
    pylon1.png
    pylon1.rgb
    pylon2.png
    pylon2.rgb
    pylon3.png
    pylon3.rgb
    raceline.png
    rain.png
    rearlight1.png
    rearlight2.png
    red-light-on.rgb
    rock2.png
    rock2.rgb
    rock3.png
    rock3.rgb
    rpm20000.png
    rpm20000.rgb
    rpm5500.png
    rpm5500.rgb
    rpm7000.png
    rpm7000.rgb
    rpm8000.png
    rpm8000.rgb
    rpm8500.png
    rpm8500.rgb
    scattered1_n.rgb
    scattered1.rgba
    scattered2_n.rgb
    scattered2.rgba
    scattered3.rgba
    scattered4.rgba
    scattered5_n.rgb
    scattered5.rgba
    scattered6_n.rgb
    scattered6.rgba
    scattered7_n.rgb
    scattered7.rgba
    smoke2.png
    smoke.png
    speed240.png
    speed240.rgb
    speed300.png
    speed300.rgb
    speed360.png
    speed360.rgb
    start-light-blue.png
    start-light-green.png
    start-light-off.png
    start-light-old-blue.png
    start-light-old-green.png
    start-light-old-off.png
    start-light-old-red.png
    start-light-old-yellow.png
    start-light-red.png
    start-light-white.png
    start-light-yellow.png
    tex-wheel.png
    torcs-ad1.png
    torcsad1.png
    torcs-ad1.rgb
    torcsad1.rgb
    torcsad2.png
    torcsad2.rgb
    torcspylon1.png
    torcspylon2.png
    torcspylon3.png
    tr-asphalt-both_nmm.png
    tr-asphalt-both_nmm.rgb
    tr-asphalt-both.png
    tr-asphalt-both.rgb
    tr-asphalt-grass-l.png
    tr-asphalt-grass-l.rgb
    tr-asphalt-grass-r.png
    tr-asphalt-grass-r.rgb
    tr-asphalt-left_nmm.png
    tr-asphalt-left_nmm.rgb
    tr-asphalt-left.png
    tr-asphalt-left.rgb
    tr-asphalt-l_nmm.png
    tr-asphalt-l_nmm.rgb
    tr-asphalt-l.png
    tr-asphalt-l.rgb
    tr-asphalt_nmm.png
    tr-asphalt_nmm.rgb
    tr-asphalt.png
    tr-asphalt-p_nmm.png
    tr-asphalt-p_nmm.rgb
    tr-asphalt-p.png
    tr-asphalt-p.rgb
    tr-asphalt.rgb
    tr-asphalt-right_nmm.png
    tr-asphalt-right_nmm.rgb
    tr-asphalt-right.png
    tr-asphalt-right.rgb
    tr-asphalt-road1.png
    tr-asphalt-road1.rgb
    tr-asphalt-sand.png
    tr-asphalt-sand.rgb
    tr-bar-gr_n.png
    tr-bar-gr_n.rgb
    tr-bar-gr.png
    tr-bar-gr.rgb
    tr-bar.png
    tr-bar.rgb
    tr-barrier.png
    tr-barrier.rgb
    tr-bar-turn1.png
    tr-bar-turn1.rgb
    tr-b-asphalt-grass6-l1.png
    tr-b-asphalt-grass6-l1.rgb
    tr-b-asphalt-grass6.png
    tr-b-asphalt-grass6.rgb
    tr-b-asphalt-grass7-l1.png
    tr-b-asphalt-grass7-l1.rgb
    tr-b-asphalt-grass7.png
    tr-b-asphalt-grass7.rgb
    tr-b-asphalt-gravel-l1.png
    tr-b-asphalt-gravel-l1.rgb
    tr-b-asphalt-gravel.png
    tr-b-asphalt-gravel.rgb
    tr-b-asphalt-l1.png
    tr-b-asphalt-l1p.png
    tr-b-asphalt-l1p.rgb
    tr-b-asphalt-l1.rgb
    tr-b-asphalt.png
    tr-b-asphalt-r1p.rgb
    tr-b-asphalt.rgb
    tr-b-asphalt-sand3-l1.png
    tr-b-asphalt-sand3-l1.rgb
    tr-b-asphalt-sand3.png
    tr-b-asphalt-sand3.rgb
    tr-b-concrete4-concrete-l1.png
    tr-b-concrete4-concrete-l1p.png
    tr-b-concrete4-concrete-l1p.rgb
    tr-b-concrete4-concrete-l1.rgb
    tr-b-road1-grass6-l2.png
    tr-b-road1-grass6-l2.rgb
    tr-b-road1-grass6.png
    tr-b-road1-grass6.rgb
    tr-b-road1-gravel-l2.png
    tr-b-road1-gravel-l2.rgb
    tr-b-road1-l2.png
    tr-b-road1-l2p.png
    tr-b-road1-l2p.rgb
    tr-b-road1-l2.rgb
    tr-b-road1-sand3-l2.png
    tr-b-road1-sand3-l2.rgb
    tr-b-road1-sand3.png
    tr-b-road1-sand3.rgb
    tr-concrete4.png
    tr-concrete4.rgb
    tr-concrete_nmm.png
    tr-concrete_nmm.rgb
    tr-concrete-pit.png
    tr-concrete-pit.rgb
    tr-concrete.png
    tr-concrete.rgb
    tr-curb-l.png
    tr-curb-l.rgb
    tr-curb-r.png
    tr-curb-r.rgb
    tr-dirtb.png
    tr-dirtb.rgb
    tr-dirt.png
    tr-dirt.rgb
    tree10.png
    tree10.rgb
    tree11.png
    tree11.rgb
    tree12.png
    tree12.rgb
    tree13.png
    tree13.rgb
    tree14.png
    tree14.rgb
    tree15.png
    tree15.rgb
    tree16.png
    tree16.rgb
    tree17.png
    tree17.rgb
    tree18.png
    tree18.rgb
    tree19.png
    tree19.rgb
    tree1.png
    tree1.rgb
    tree20.png
    tree20.rgb
    tree2.png
    tree2.rgb
    tree3.png
    tree3.rgb
    tree4.png
    tree4.rgb
    tree5.png
    tree5.rgb
    tree7.png
    tree7.rgb
    tree8.png
    tree8.rgb
    tree9.png
    tree9.rgb
    treebui1.png
    treebui1.rgb
    treebui2.png
    treebui2.rgb
    treeg1.png
    treeg1.rgb
    tr-fake-road-2.png
    tr-fake-road-2.rgb
    tr-fake-road-borders.png
    tr-fake-road-borders.rgb
    tr-fake-road-lines.png
    tr-fake-road-lines.rgb
    tr-fake-road.png
    tr-fake-road.rgb
    tr-grass2.png
    tr-grass2.rgb
    tr-grass3.png
    tr-grass3.rgb
    tr-grass4.png
    tr-grass4.rgb
    tr-grass5.png
    tr-grass5.rgb
    tr-grass6.png
    tr-grass6.rgb
    tr-grass7.png
    tr-grass7.rgb
    tr-grass.png
    tr-grass.rgb
    tr-gravel.png
    tr-gravel.rgb
    tr-road1-asphalt.png
    tr-road1-asphalt.rgb
    tr-road1-pit.png
    tr-road1-pit.rgb
    tr-road1.png
    tr-road1.rgb
    tr-sand2.png
    tr-sand2.rgb
    tr-sand3.png
    tr-sand3.rgb
    tr-sand.png
    tr-sand.rgb
    tr-snow.png
    tr-snow.rgb
    tr-stone-wall2.png
    tr-stone-wall2.rgb
    tr-stone-wall.png
    tr-stone-wall.rgb
    tr-tirewall.png
    tr-tirewall.rgb
    tr-wall-gr.png
    tr-wall_nmm.png
    tr-wall_nmm.rgb
    tr-wall.png
    tr-wall.rgb
    tr-water.png
    tr-water.rgb
    turn100L.png
    turn100L.rgb
    turn100R.png
    turn100R.rgb
    turn150L.png
    turn150L.rgb
    turn150R.png
    turn150R.rgb
    turn200L.png
    turn200L.rgb
    turn200R.png
    turn200R.rgb
    turn300L.png
    turn300L.rgb
    turn300R.png
    turn300R.rgb
    turn50L.png
    turn50L.rgb
    turn50R.png
    turn50R.rgb
    wheel3d.png
    DESTINATION ${datadir}/data/textures
)
