install(FILES
    default.xml
    logo.rgb
    DESTINATION ${datadir}/drivers/shadow
)

add_subdirectory(36gp-century-r11b)
add_subdirectory(36gp-ettore-t59)
add_subdirectory(36gp-milano-12c36)
add_subdirectory(36gp-milano-tipop3)
add_subdirectory(36gp-motorunion-typec)
add_subdirectory(36gp-silber-w25b)
add_subdirectory(36gp-tridenti-6c34)
add_subdirectory(36gp-tridenti-v8ri)
add_subdirectory(67gp-cavallo-123)
add_subdirectory(67gp-guthrie-eagle)
add_subdirectory(67gp-kuiper-t81)
add_subdirectory(67gp-mango-ms7)
add_subdirectory(67gp-murasama-37a)
add_subdirectory(67gp-upping-ut19)
add_subdirectory(ls1-archer-r9)
add_subdirectory(ls1-cavallo-570s1)
add_subdirectory(ls1-marisatech-gt4r)
add_subdirectory(ls1-newcastle-fury)
add_subdirectory(ls1-taipan-ltsr)
add_subdirectory(ls1-toro-rgt)
add_subdirectory(ls1-vulture-v5r)
add_subdirectory(ls1-vulture-v6r)
add_subdirectory(ls1-zentek-z7r)
add_subdirectory(ls2-bavaria-g3gtr)
add_subdirectory(ls2-bavaria-nb)
add_subdirectory(ls2-boxer-96rsr)
add_subdirectory(ls2-cavallo-360r)
add_subdirectory(ls2-morley-r900)
add_subdirectory(ls2-vulture-v6rs2)
add_subdirectory(mp1-aichi-ej15)
add_subdirectory(mp1-aichi-tf105)
add_subdirectory(mp1-bavaria-fw27)
add_subdirectory(mp1-cavallo-f2005)
add_subdirectory(mp1-diamond-r25)
add_subdirectory(mp1-kuala-c24)
add_subdirectory(mp1-midland-ps05)
add_subdirectory(mp1-midland-rb1)
add_subdirectory(mp1-murasama-007)
add_subdirectory(mp1-sector-mp420)
add_subdirectory(mpa11-murasama)
add_subdirectory(mpa12-deckard)
add_subdirectory(mpa12-murasama)
add_subdirectory(mpa12-spirit)
add_subdirectory(mpa1-ffr)
add_subdirectory(mpa1-furia)
add_subdirectory(mpa1-hartbill-2002)
add_subdirectory(mpa1-murasama)
add_subdirectory(mpa1-team-lynx)
add_subdirectory(MPE-Arc)
add_subdirectory(sc-boxer-96)
add_subdirectory(sc-cavallo-360)
add_subdirectory(sc-deckard-conejo)
add_subdirectory(sc-fmc-gt4)
add_subdirectory(sc-kanagawa-z35gts)
add_subdirectory(sc-kongei-kk8s)
add_subdirectory(sc-lynx-220)
add_subdirectory(sc-murasama-nsx)
add_subdirectory(sc-spirit-300)
add_subdirectory(trb1-cavallo-360rb)
