install(FILES
    readme.txt
    default.xml
    logo.rgb
    DESTINATION ${datadir}/drivers/simplix
)

add_subdirectory(36gp-ettore-t59)
add_subdirectory(36gp-milano-12c36)
add_subdirectory(36gp-silber-w25b)
add_subdirectory(36gp-tridenti-6c34)
add_subdirectory(36gp-tridenti-v8ri)
add_subdirectory(67gp-cavallo-123)
add_subdirectory(67gp-guthrie-eagle)
add_subdirectory(67gp-kuiper-t81)
add_subdirectory(67gp-mango-ms7)
add_subdirectory(67gp-upping-ut19)
add_subdirectory(lp1-pescy-p60)
add_subdirectory(lp1-vieringe-vr8)
add_subdirectory(ls1-archer-r9)
add_subdirectory(ls1-cavallo-570s1)
add_subdirectory(ls1-marisatech-gt4r)
add_subdirectory(ls1-newcastle-fury)
add_subdirectory(ls1-taipan-ltsr)
add_subdirectory(ls1-toro-rgt)
add_subdirectory(ls1-vulture-v5r)
add_subdirectory(ls1-vulture-v6r)
add_subdirectory(ls1-zentek-z7r)
add_subdirectory(ls2-bavaria-g3gtr)
add_subdirectory(mp5-fmc)
add_subdirectory(mp5-fmc-drift)
add_subdirectory(mp5-fmc-speedy)
add_subdirectory(ref-sector-p4)
add_subdirectory(sc-boxer-96)
add_subdirectory(sc-cavallo-360)
add_subdirectory(sc-fmc-gt4)
add_subdirectory(sc-lynx-220)
add_subdirectory(sc-murasama-nsx)
add_subdirectory(sc-spirit-300)
add_subdirectory(srw-boxer-ts)
add_subdirectory(srw-kanagawa-gtr)
add_subdirectory(srw-kongei-kk8s)
add_subdirectory(srw-sector-p4)
add_subdirectory(stock-deckard-72montecristo)
add_subdirectory(stock-fmc-71tortilla)
add_subdirectory(stock-mercurial-71coldfront)
add_subdirectory(stock-patriot-72bullfighter)
add_subdirectory(stock-plethora-71rumrunner)
add_subdirectory(stock-taipan-71chaparral)
add_subdirectory(trb1-boxer-trbrs)
add_subdirectory(trb1-cavallo-360rb)
add_subdirectory(trb1-sector-rb1)
add_subdirectory(trb1-silber-rblk)
add_subdirectory(trb1-spirit-rb1lt)
add_subdirectory(trb1-taipan-rb1)
add_subdirectory(trb1-vieringe-5rb)
add_subdirectory(trb1-zaxxon-rb)
