install(FILES
    default.xml
    logo.rgb
    DESTINATION ${datadir}/drivers/usr
)

add_subdirectory(36gp-ettore-t59)
add_subdirectory(36gp-milano-12c36)
add_subdirectory(36gp-milano-tipop3)
add_subdirectory(36gp-motorunion-typec)
add_subdirectory(36gp-tridenti-6c34)
add_subdirectory(36gp-tridenti-v8ri)
add_subdirectory(67gp-cavallo-123)
add_subdirectory(67gp-guthrie-eagle)
add_subdirectory(67gp-kuiper-t81)
add_subdirectory(67gp-murasama-37a)
add_subdirectory(67gp-upping-ut19)
add_subdirectory(lp1-karasu-ksp101)
add_subdirectory(lp1-luxura-lp02)
add_subdirectory(lp1-pescy-p60)
add_subdirectory(lp1-sprite-p1rs)
add_subdirectory(lp1-vieringe-vr8)
add_subdirectory(ls1-archer-r9)
add_subdirectory(ls1-cavallo-570s1)
add_subdirectory(ls1-marisatech-gt4r)
add_subdirectory(ls1-newcastle-fury)
add_subdirectory(ls1-taipan-ltsr)
add_subdirectory(ls1-toro-rgt)
add_subdirectory(ls1-vulture-v5r)
add_subdirectory(ls1-vulture-v6r)
add_subdirectory(ls1-zentek-z7r)
add_subdirectory(ls2-bavaria-g3gtr)
add_subdirectory(ls2-boxer-96rsr)
add_subdirectory(ls2-cavallo-360r)
add_subdirectory(ls2-condor-c400r)
add_subdirectory(ls2-lynx-xkr)
add_subdirectory(ls2-morley-r900)
add_subdirectory(ls2-sprite-gts)
add_subdirectory(ls2-vortex-gt)
add_subdirectory(mpa11-murasama)
add_subdirectory(mpa12-deckard)
add_subdirectory(mpa12-murasama)
add_subdirectory(mpa12-spirit)
add_subdirectory(mpa1-ffr)
add_subdirectory(mpa1-furia)
add_subdirectory(mpa1-hartbill-2002)
add_subdirectory(mpa1-murasama)
add_subdirectory(mpa1-team-lynx)
add_subdirectory(rs1-kenji-08)
add_subdirectory(sc-boxer-96)
add_subdirectory(sc-cavallo-360)
add_subdirectory(sc-deckard-conejo)
add_subdirectory(sc-fmc-gt4)
add_subdirectory(sc-kanagawa-z35gts)
add_subdirectory(sc-lynx-220)
add_subdirectory(sc-murasama-nsx)
add_subdirectory(sc-spirit-300)
add_subdirectory(trb1-boxer-trbrs)
add_subdirectory(trb1-cavallo-360rb)
add_subdirectory(trb1-sector-rb1)
add_subdirectory(trb1-silber-rblk)
add_subdirectory(trb1-spirit-rb1lt)
add_subdirectory(trb1-taipan-rb1)
add_subdirectory(trb1-zaxxon-rb)
