install(FILES
    360.wav
    driver.acc
    driverL0.acc
    driverL0-src.ac
    driverL1.acc
    driverL1-src.ac
    driverL2.acc
    driverL2-src.ac
    driverL3.acc
    driverL3-src.ac
    driverL4.acc
    driverL4-src.ac
    driverL5.acc
    driverL5-src.ac
    driverL6.acc
    driverL6-src.ac
    driverR0.acc
    driverR0-src.ac
    driverR1.ac
    driverR1.acc
    driverR2.acc
    driverR2-src.ac
    driverR3.acc
    driverR3-src.ac
    driverR4.acc
    driverR4-src.ac
    driverR5.acc
    driverR5-src.ac
    driverR6.acc
    driverR6-src.ac
    driver-sc-cavallo-360.png
    driver-src.ac
    nmap.png
    sc-cavallo-360.acc
    sc-cavallo-360-bee.png
    sc-cavallo-360-bee-preview.jpg
    sc-cavallo-360-christmas.png
    sc-cavallo-360-christmas-preview.jpg
    sc-cavallo-360-int.png
    sc-cavallo-360.png
    sc-cavallo-360-preview.jpg
    sc-cavallo-360-rpm.png
    sc-cavallo-360-speed.png
    sc-cavallo-360-src.ac
    sc-cavallo-360-tsubashi.png
    sc-cavallo-360-tsubashi-preview.jpg
    sc-cavallo-360.xml
    shadow.png
    steerhr.acc
    steerhr-src.ac
    steerlr.acc
    steerlr-src.ac
    wheel3d-bee.png
    wheel3d.png
    wheel3d-tsubashi.png
    readme.txt
    DESTINATION ${datadir}/cars/models/sc-cavallo-360
)
