install(FILES
    abs-icon-normal.png
    board-current.png
    board-first.png
    board-normal.png
    dash-items.png
    delta-gaining.png
    delta-losing.png
    delta-normal.png
    driverinput-brake.png
    driverinput-clutch.png
    driverinput-container.png
    driverinput-throttle.png
    driverinput-wheel.png
    engine-icon-damaged.png
    engine-icon.png
    engine-icon_temp.png
    fuel-icon-empty.png
    fuel-icon-full.png
    fuel-icon-normal.png
    fuel-icon-redalert.png
    fuel-info-container.png
    gear-container.png
    gforces-dot.png
    gforces-graph.png
    hudtest.svg
    lap-container.png
    laptime-container-green.png
    laptime-container-grey.png
    laptime-container.png
    laptime-container-red.png
    laptime-container-violet.png
    led-green.png
    led-normal.png
    led-red.png
    led-yellow.png
    position-container.png
    rpm-off.png
    rpm-on.png
    speed-container.png
    tire-cold-left.png
    tire-cold-middle.png
    tire-cold.png
    tire-cold-right.png
    tire-degradation-off.png
    tire-degradation-on.png
    tire-hot-left.png
    tire-hot-middle.png
    tire-hot.png
    tire-hot-right.png
    tire-optimal-left.png
    tire-optimal-middle.png
    tire-optimal.png
    tire-optimal-right.png
    tire-slip-indicator.png
    tire-temps-background.png
    tractioncontrol-icon-normal.png
    DESTINATION ${datadir}/data/img/osg-hud-originale
)
